<resources>
    <string name="app_name">Music Manager</string>
    <string name="please_search_an_artist_name">Artist name</string>
    <string name="search">Search</string>
    <string name="top">Top</string>
    <string name="about">About</string>
    <string name="copy_right">Developed By Pouya Heydari</string>
    <string name="technologies_description">Kotlin Coroutines\nMVVM\nLiveData\nViewModel\nRoom\nHilt\nRetrofit\nNavigation\nPaging3\nUnit Test\nSingle Activity\nSafe Args\nBinding\nDark/Light Mode</string>
    <string name="tracks">Tracks</string>
    <string name="please_enter_artist_name">Please enter an artist\'s name</string>
    <string name="a_notifier_is_not_defined_in_the_when_block">A notifier is not defined in the when block!</string>
    <string name="please_try_again">Try again</string>
    <string name="album_is_not_available">Album is not available</string>
    <string name="album_not_saved">Album not saved</string>
    <string name="back">back</string>
    <string name="cover">cover</string>
    <string name="top_albums">Top Albums</string>
    <string name="find_artist">Find Artist</string>
    <string name="saved_albums">Saved Albums</string>
    <string name="technologies">Technologies</string>
    <string name="logo">Logo</string>
    <string name="contact">contact</string>
    <string name="contact_me">Contact Me</string>
    <string name="pouya_heydari">Pouya Heydari</string>
    <string name="github">github</string>
    <string name="linkedin">linkedin</string>
    <string name="website">website</string>
    <string name="app_description">This application demonstrates how to implement latest technologies in Android. For more information kindly visit the Github page.</string>
    <string name="saved">Saved</string>
    <string name="save_button">Save button</string>
    <string name="internet_connection_error">Internet connection error</string>
    <string name="server_connection_error">Server connection error</string>
</resources>
